bugfix: fixed bug for modal and links Fix bug where sms links were too big and added cursor for modal links

--- a/src/components/Module/Modal/Modal.css
+++ b/src/components/Module/Modal/Modal.css
@@ -5,9 +5,6 @@
   width: 100%;
   top: 0;
   left: 0;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
   z-index: 10;
   animation: fadeInAnimation ease 0.25s;
   animation-iteration-count: 1;
@@ -21,11 +18,8 @@
   width: 100%;
   top: 0;
   left: 0;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
   animation: fadeOut ease 0.25s;
-
+  animation-fill-mode: forwards;
 }
 .modal_style_initial {
  z-index: 0;
